--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
+# Ignore credentials files (if any)
+secret.swift
+
